--- a/markup/components/profile-card/profile-card.styl
+++ b/markup/components/profile-card/profile-card.styl
@@ -33,6 +33,7 @@
     &__rating
         position: relative
         margin-top: 10px
+        z-index: 50
 
         & > .rating
             margin-left: 72px
