--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -22,10 +22,12 @@
             left: 30px
             transform: translateY(-50%)
             z-index: 2
+            pointer-events: none
 
         .badges
             z-index: 2
             top: 24px
+            pointer-events: none
 
         .heading
             color: #fff
