--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -15,6 +15,9 @@
         position: absolute !important
         box-sizing: content-box
 
+        .popup__wrapper
+            height: auto;
+
     &:not(.popup_no_transform)
         transform: translate3d(0, 0, 0)
 
