--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -369,6 +369,13 @@
         svg
             fill: mainColor
 
+        .selectbox:hover
+            .selectbox__box
+                background-color: #2a2a2b
+
+            .selectbox__value
+                color:#d2a36f
+
         & ^[0]__link
 
             +above(1024px)
