--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -15,6 +15,9 @@
     padding-bottom: 20px
     overflow auto;
 
+    +below(1024px)
+        padding-top: 0
+
     &__select
         display: none
         justify-content: space-between
