--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -60,11 +60,13 @@
         height 60px
         border 1px solid borderColor
         cursor: pointer
+        m-transition(background-color)
 
     &__value
         text-transform: uppercase
         font-size: 16px
         ellipsis(100%)
+        m-transition(color)
 
     &__arrow
         position: absolute
