--- a/markup/components/model-info/model-info.styl
+++ b/markup/components/model-info/model-info.styl
@@ -54,6 +54,9 @@
             font-family fontSecond
             font-weight: 500
 
+        i
+            margin-left: 12px
+
     &__icon-ok
         fill: mainColor
         margin-right: 12px
