--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -467,7 +467,7 @@ mixin user-fill-profile-4
                         +field-label Snapchat
                         +field-input
 
-        +accordion
+        +accordion.accordion_dark.user-fill-profile__only-btn
             +accordion-item('Select your location')
                 +grid
                     +col(6)
