--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -14,6 +14,16 @@
         &_md
             margin-top: 0
 
+    &__only-btn
+        margin-top: 24px
+        background-color: transparent
+
+        .accordion__button
+            background-color: darkGreyColor
+
+            &:hover
+               background-color: rgb(38, 39, 40);
+
     &__content
         display: flex
         margin-top: 46px
