--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -53,9 +53,9 @@ mixin user-fill-profile-1
         .user-fill-profile__section
             +heading._md Photos
             +grid-masonry({ desktop: 3, laptop: 2, tablet: 2, mobile: 1}).js-user-fill-profile-photos
-                +uploaded-photo('profile/photos/1.jpg').user-fill-profile__masonry-item
-                +uploaded-photo('profile/photos/2.jpg').user-fill-profile__masonry-item
-                +file-column(null, 'photo', 'image/*', false, 'Add photo', 'The size should not exceed 2 MB').user-fill-profile__masonry-item
+                +uploaded-photo('profile/photos/1.jpg').user-fill-profile__masonry-item.js-masonry-item
+                +uploaded-photo('profile/photos/2.jpg').user-fill-profile__masonry-item.js-masonry-item
+                +file-column(null, 'photo', 'image/*', false, 'Add photo', 'The size should not exceed 2 MB').user-fill-profile__masonry-item.js-masonry-item
         .user-fill-profile__section
             +heading._md Video
             +grid
@@ -924,7 +924,7 @@ mixin user-fill-profile-9
                 +col(4)
                     +file-column(null, 'photo', 'image/*', false, 'Add photo', 'The size should not exceed 2 MB')
                 +col(8)
-                    +textarea Details here
+                    +textarea('details', 'Details here')
 
             +grid
                 +col(12)
