--- a/markup/components/arrow-up/arrow-up.styl
+++ b/markup/components/arrow-up/arrow-up.styl
@@ -11,7 +11,7 @@
     z-index 5
     -webkit-tap-highlight-color transparent
 
-    transition(opacity, background-color)
+    m-transition(opacity, background-color)
 
     +below(1024px)
         display none
