--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -10,12 +10,12 @@
     cursor pointer
     letter-spacing 1px
     color: darkGreyColor
-    transition(all)
+    m-transition(all)
     /*iziAnimation()*/
     box-sizing border-box
 
     b
-        transition(all)
+        m-transition(all)
 
     &_inline
         display: inline-block
