--- a/markup/components/checkbox/checkbox.styl
+++ b/markup/components/checkbox/checkbox.styl
@@ -25,7 +25,7 @@
         border 1px solid borderColor
         background-color bgColor
 
-        transition(background-color, border-color)
+        m-transition(background-color, border-color)
 
     &__text
         display inline-block
@@ -45,6 +45,6 @@
 
     svg
         transform: scale(0)
-        transition(transform)
+        m-transition(transform)
         flex-shrink: 0
         fill #fff
