--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -73,7 +73,7 @@
         margin-top: 21px
 
         a
-            transition(opacity)
+            m-transition(opacity)
 
             &:hover
                 opacity: .75
@@ -87,7 +87,7 @@
         height: 100%
         text-decoration: none
         color mainColor
-        transition(color)
+        m-transition(color)
 
         &:hover
             color: #fff
