--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -57,7 +57,7 @@ photoTapeItemWidthMobile = 60px
         height: 24px
         background-color: mainColor
         will-change: width, height;
-        transition(width, height, border-radius)
+        m-transition(width, height, border-radius)
 
         +below(768px)
             top: photoTapeItemWidthMobile
