--- a/markup/components/reviews/reviews.styl
+++ b/markup/components/reviews/reviews.styl
@@ -40,7 +40,7 @@
         text-transform uppercase
         background-color: transparent
         flex-shrink: 0
-        transition(opacity)
+        m-transition(opacity)
 
         &.active
             opacity: 1
