--- a/markup/components/user-nav/user-nav.styl
+++ b/markup/components/user-nav/user-nav.styl
@@ -5,7 +5,7 @@
     border-bottom: 1px solid #e5e5e5;
     box-shadow: 0 10px 40px rgba(29, 29, 29, 0)
     clear: both;
-    transition(border-color, box-shadow)
+    m-transition(border-color, box-shadow)
 
     &.fixed
         position: fixed
@@ -24,7 +24,7 @@
         width: 185px
         height: 60px
         background-color: bgColor
-        transition(background-color)
+        m-transition(background-color)
 
         +below(1024px)
             padding-left: 15px
@@ -64,7 +64,7 @@
         letter-spacing 1px
         text-transform uppercase
         text-decoration: none
-        transition(color)
+        m-transition(color)
 
     &__badge
         position: absolute
