--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -205,5 +205,5 @@
 
     &__plus-icon
         margin-left: 8px
-        transition(transform)
+        m-transition(transform)
         fill: mainColor
