--- a/markup/components/rating/rating.styl
+++ b/markup/components/rating/rating.styl
@@ -66,7 +66,7 @@
         display: block
         width: calc(100% + 15px)
         background-color: darkGreyColor
-        transition(opacity)
+        m-transition(opacity)
         z-index: 10
         box-shadow 0 10px 40px 0 rgba(29, 29, 29, .1)
 
