--- a/markup/components/add-input/add-input.pug
+++ b/markup/components/add-input/add-input.pug
@@ -1,5 +1,5 @@
-mixin add-input(name, value, placeholder, type)
+mixin add-input(name, value, placeholder, type, inputClass)
     +b.add-input&attributes(attributes)
         +e.icon
             != pugHelpers.Icon.call(locals, {iconName: 'plus', className: 'add-input__plus', iconWidth: '12', iconHeight: '12'})
-        +e.INPUT.control(placeholder=placeholder name=name value=value type=type).control
+        +e.INPUT.control(placeholder=placeholder name=name value=value type=type class=inputClass||'').control
