--- a/markup/components/checkbox/checkbox.pug
+++ b/markup/components/checkbox/checkbox.pug
@@ -1,5 +1,5 @@
 mixin checkbox(checked, name, value)
-  +b.LABEL.checkbox&attributes(attributes)
+  +b.LABEL.checkbox&attributes(attributes)(class=checked ? 'checked' : '')
     +e.INPUT.input(type='checkbox' name=name||'', value=value||'', checked=checked||false)
     +e.SPAN.box
         != pugHelpers.Icon.call(locals, {iconName: 'ok', iconWidth: '12', iconHeight: '10'})
