--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -166,3 +166,14 @@
     .grid__col
         +below(768px)
             width: 100%
+
+    .checkbox + .add-input {
+        opacity: 0;
+        pointer-events: none;
+        m-transition(opacity);
+    }
+
+    .checkbox.checked + .add-input {
+        opacity: 1;
+        pointer-events: all;
+    }
