--- a/markup/components/breadcrumbs/breadcrumbs.styl
+++ b/markup/components/breadcrumbs/breadcrumbs.styl
@@ -23,7 +23,7 @@
         font-weight 400
         text-transform uppercase
         text-decoration: none
-        transition(color)
+        m-transition(color)
 
         &:hover, &.active
             color: mainColor
