--- a/markup/components/city-list/city-list.styl
+++ b/markup/components/city-list/city-list.styl
@@ -65,7 +65,7 @@
         text-transform uppercase
         letter-spacing 1px
 
-        transition(opacity, color)
+        m-transition(opacity, color)
 
     &__badge
         background-color #212223
