--- a/markup/components/city-suggest/city-suggest.styl
+++ b/markup/components/city-suggest/city-suggest.styl
@@ -3,7 +3,7 @@
     opacity 0
     transform: translate3d(0, 10px, 0) scale(.98)
     pointer-events none
-    transition(opacity, transform)
+    m-transition(opacity, transform)
     box-shadow 0 10px 40px 0 rgba(29, 29, 29, .1)
 
     &.active
@@ -30,7 +30,7 @@
         justify-content space-between
 
     &__button
-        transition(all)
+        m-transition(all)
         width 50%
 
         &:hover
