--- a/markup/components/close/close.styl
+++ b/markup/components/close/close.styl
@@ -7,7 +7,7 @@
     height: 36px
     background-color: #2b2c2d
     cursor pointer
-    transition(opacity)
+    m-transition(opacity)
 
     &_top_right
         position: absolute
