--- a/markup/components/contacts-card/contacts-card.styl
+++ b/markup/components/contacts-card/contacts-card.styl
@@ -62,7 +62,7 @@
 
     &__icon
         fill darkGreyColor
-        transition(all)
+        m-transition(all)
 
         &:hover
             fill mainColor
