--- a/markup/components/demo/demo.styl
+++ b/markup/components/demo/demo.styl
@@ -18,7 +18,7 @@
         display: block
         text-decoration: none
         padding: 15px 0
-        transition(opacity)
+        m-transition(opacity)
 
         &:hover
             opacity .75
