--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -24,7 +24,7 @@
         height: 60px
         background-color: #fff
         border: 1px solid borderColor
-        transition(border-color, background-color)
+        m-transition(border-color, background-color)
         cursor: pointer
         iziAnimation()
 
@@ -37,7 +37,7 @@
         left: 50%
         transform: translate(-50%, -50%)
         fill: mainColor
-        transition(opacity, fill)
+        m-transition(opacity, fill)
 
         &_dots
             fill: darkGreyColor
