--- a/markup/components/fill-profile-nav/fill-profile-nav.styl
+++ b/markup/components/fill-profile-nav/fill-profile-nav.styl
@@ -35,7 +35,7 @@
         font-weight 400
         line-height 1.375
         background-color #fff
-        transition(color, border-color)
+        m-transition(color, border-color)
 
     &__icon
         transform: translateX(2px)
