--- a/markup/components/follow-us/follow-us.styl
+++ b/markup/components/follow-us/follow-us.styl
@@ -21,7 +21,7 @@
         fill: mainColor
 
     a
-        transition(opacity)
+        m-transition(opacity)
 
         &:hover
             opacity: .75
