--- a/markup/components/info-control/info-control.styl
+++ b/markup/components/info-control/info-control.styl
@@ -40,7 +40,7 @@
         font-size 16px
         font-weight 400
         ellipsis(100%)
-        transition(all)
+        m-transition(all)
         margin-right: 20px
         text-transform: uppercase
         letter-spacing 1px
@@ -50,7 +50,7 @@
         flex-shrink: 0
         fill: mainColor
         transform: scale(0)
-        transition(transform)
+        m-transition(transform)
 
     &_light
 
