--- a/markup/components/list/list.styl
+++ b/markup/components/list/list.styl
@@ -18,7 +18,7 @@
             box-shadow: 0 10px 40px rgba(29, 29, 29, .1)
             opacity: 0
             pointer-events: none
-            transition(opacity)
+            m-transition(opacity)
 
         &_dropdown
             & > ^[0]__button ^[0]__arrow
@@ -75,14 +75,14 @@
         padding: 0 20px
         background-color: #fff
         text-decoration: none
-        transition(background-color)
+        m-transition(background-color)
 
     &__text
         color darkGreyColor
         font-family fontMain
         font-size 16px
         font-weight 400
-        transition(all)
+        m-transition(all)
         ellipsis(100%)
 
     &__arrow
