--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -14,7 +14,7 @@ modelInfoPopupMediumXPadding = 18px
     box-shadow 0 10px 40px rgba(29, 29, 29, .1)
     opacity: 0
     pointer-events none
-    transition(opacity, transform)
+    m-transition(opacity, transform)
 
     &.active
         transform: translate3d(-50%, -4px, 0) scale(1)
