--- a/markup/components/model-photos/model-photos.styl
+++ b/markup/components/model-photos/model-photos.styl
@@ -61,7 +61,7 @@
         width: 100%
         height: 100%
         fill-img()
-        transition(transform, opacity)
+        m-transition(transform, opacity)
 
     &__description
         position: absolute
@@ -75,7 +75,7 @@
         height: 100%
         background-color: rgba(darkGreyColor, .85)
         z-index: 1
-        transition(opacity)
+        m-transition(opacity)
 
         b
             color #fff
