--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -43,7 +43,7 @@ photoTapeItemWidthMobile = 60px
         width: 100%
         height: auto
         pointer-events none
-        transition(opacity)
+        m-transition(opacity)
 
     &__badge
         position: absolute
