--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -41,7 +41,7 @@
         top: 50%
         transform: translate3d(0, -50%, 0)
         cursor: pointer
-        transition(transform, background-color, opacity)
+        m-transition(transform, background-color, opacity)
         z-index: 50
         overflow: hidden
 
@@ -59,7 +59,7 @@
             height: 100%;
             background-color: rgba(#fff, .05)
             border-radius: 50%;
-            transition(all)
+            m-transition(all)
 
             +below(1200px)
                 background-color: darkGreyColor
@@ -78,7 +78,7 @@
             position: absolute
             top: 50%
             transform: translate(-50%, -50%)
-            transition(all)
+            m-transition(all)
             fill: rgba(#fff, .6)
 
         &_prev
