--- a/markup/components/rating-interactive/rating-interactive.styl
+++ b/markup/components/rating-interactive/rating-interactive.styl
@@ -36,7 +36,7 @@
         font-size 16px
         font-weight 400
         text-transform uppercase
-        transition(all)
+        m-transition(all)
 
         +below(400px)
             width: 100%
@@ -54,7 +54,7 @@
         height: 60px
         cursor: pointer
         background-color: transparent
-        transition(border-color, background-color)
+        m-transition(border-color, background-color)
         border: 1px solid borderColor
         margin-left: -1px
         margin-top: -1px
@@ -91,7 +91,7 @@
         height 15px
         fill: #e6e6e6
         //fill: rgba(#fff, .15)
-        transition(all)
+        m-transition(all)
 
 
     &-counter
