--- a/markup/components/recommended-slider/recommended-slider.styl
+++ b/markup/components/recommended-slider/recommended-slider.styl
@@ -41,7 +41,7 @@
         background-color: darkGreyColor
         cursor: pointer
         opacity: 1
-        transition(opacity)
+        m-transition(opacity)
 
         &.swiper-button-disabled
             opacity: 0
