--- a/markup/pages/faq.pug
+++ b/markup/pages/faq.pug
@@ -11,7 +11,7 @@ block header
     +header
 
 block content
-    +terms('Terms', 2)
+    +terms('Faq', 6)
         p I was always attracted to programming, even at the institute I won the All-Russian Olympiad. And in 1999, we partnered with Mikhail Iosilevich launched an information site in Nizhny Novgorod. It was called NN.ru.
         p There was everything: starting from the flea market, where one can sell another mobile phone, ending with local news. The fact that your neighbor broke his leg is always more interesting than a catastrophe in Southeast Asia. Our advantage was in proximity to local rumors, gossip and other information that is constantly circulating. It remained to create a platform where it could spread. In Nizhny Novgorod, then, as in other regions, there was a local point of traffic exchange, when providers provided users with free access to local sites. This helped to assemble the first audience.
         p We had only $ 1,000, which Misha took from his father. We agreed on free rent for the first time in friendship. Then I still borrowed $ 10,000 from my parents, but I returned everything successfully. At first we, co-founders of the startup, were forced to work both as a blacksmith, a reaper, and a pipe on the pipe. Often I came home at three in the morning. My first wife left me, she said that I was an idiot, although I was an intelligent man: I could get a job and make normal money.
