--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -2,7 +2,7 @@
 // Common styles of the project
 
 .hide-when-header-fixed
-    transition(all)
+    m-transition(all)
 
 .hide-mob
     +below(1024px)
