--- a/markup/components/auth-popup/auth-popup.styl
+++ b/markup/components/auth-popup/auth-popup.styl
@@ -124,7 +124,7 @@
         letter-spacing 1px
         text-transform uppercase
         background-color: darkGreyColor
-        transition(all)
+        m-transition(all)
 
         &::placeholder
             color #fff
@@ -143,7 +143,7 @@
         font-weight 400
         line-height: 1.25
         text-decoration: none
-        transition(all)
+        m-transition(all)
 
         &:hover
             color rgba(#fff, 1)
