--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -24,7 +24,7 @@
             border-bottom: 2px solid transparent
             margin-bottom: -1px
 
-            transition(border-color)
+            m-transition(border-color)
 
             &:not(:last-child)
                 margin-right: 27px
@@ -43,7 +43,7 @@
             font-size: 16px
             letter-spacing: 1px
             color: darkGreyColor
-            transition(opacity)
+            m-transition(opacity)
 
     .grid__col_three, .grid__col_six
         +below(1104px)
