--- a/markup/components/logo/logo.styl
+++ b/markup/components/logo/logo.styl
@@ -2,7 +2,7 @@
     display: flex
     align-items: center
     text-decoration: none
-    transition(all)
+    m-transition(all)
 
     &::before
         content: ''
