--- a/markup/components/payment-method/payment-method.styl
+++ b/markup/components/payment-method/payment-method.styl
@@ -34,14 +34,14 @@
         text-decoration: none
         border: 1px solid borderColor
         ellipsis(100%)
-        transition(border-color, background-color)
+        m-transition(border-color, background-color)
 
     &__heading
         font-size 16px
         color: darkGreyColor
         padding-right: 10px
         ellipsis(100%)
-        transition(color)
+        m-transition(color)
 
     &__logo
         height: auto
