--- a/markup/components/post-preview/post-preview.styl
+++ b/markup/components/post-preview/post-preview.styl
@@ -14,20 +14,20 @@
         border-top: 0
         padding: 25px 28px
         min-height: 180px
-        transition(all)
+        m-transition(all)
 
     &__text
         font-size 16px
         line-height 1.375
         color darkGreyColor
         padding-bottom: 25px
-        transition(all)
+        m-transition(all)
 
     &__date
         margin-top: auto
         font-size 14px
         color rgba(darkGreyColor, .3)
-        transition(all)
+        m-transition(all)
 
     &:hover
         & ^[0]__body
