--- a/markup/components/radio/radio.styl
+++ b/markup/components/radio/radio.styl
@@ -27,7 +27,7 @@
         height 24px
         border 1px solid borderColor
         background-color bgColor
-        transition(background-color, border-color)
+        m-transition(background-color, border-color)
         border-radius: 50%
 
         &::before
@@ -36,7 +36,7 @@
             height: 6px
             background-color: #fff
             transform: scale(0)
-            transition(transform)
+            m-transition(transform)
             border-radius: 50%
 
     &__text
