--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -4,7 +4,7 @@
     align-items: center
     width: 100%
     height: 100%
-    transition(background)
+    m-transition(background)
 
     &_extended
         background-color: #fff
@@ -57,7 +57,7 @@
 
     &__icon
         fill: darkGreyColor
-        transition(all)
+        m-transition(all)
 
         &:hover
             opacity .6
@@ -69,4 +69,4 @@
         width: 60px
         height: 60px
         margin-right: -60px
-        transition(all)
+        m-transition(all)
